--- a/package.json
+++ b/package.json
@@ -50,9 +50,9 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.25.2",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
-    "@developer-plus/eslint-config": "^0.1.1",
     "@types/node": "^17.0.45",
     "bumpp": "^7.2.0",
     "eslint": "^8.18.0",
