--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,26 @@
-.cache
-.DS_Store
-.idea
-*.log
-*.tgz
-coverage
-dist
-lib-cov
+# Logs
 logs
-node_modules
-temp
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-auto-imports.d.ts
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+.prettierrc.yml
